[gd_scene load_steps=8 format=2]

[ext_resource path="res://Escenas/Menu_tablas_multiplicar.gd" type="Script" id=1]
[ext_resource path="res://images/background/bg_2.png" type="Texture" id=2]
[ext_resource path="res://fonts/Enagol-Math-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sound fx/over_button.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu_tablas_multiplicar" type="Node"]

script = ExtResource( 1 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="header" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_top = 37.0
margin_right = 1437.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Selecciona los modos que quieres incluir"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Button_atras" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 958.0
margin_top = 631.0
margin_right = 1265.0
margin_bottom = 702.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Atr√°s"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="Button_inicio" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 631.0
margin_right = 927.0
margin_bottom = 702.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Inicio"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="button_enter_sound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CheckBox_tabla_1" type="CheckBox" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 145.0
margin_right = 521.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Uno"
flat = false
align = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="CheckBox_tabla_2" type="CheckBox" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 145.0
margin_right = 965.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Dos"
flat = false
align = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "custom_fonts" ]

[node name="CheckBox_tabla_3" type="CheckBox" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 220.0
margin_right = 521.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Tres"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckBox_tabla_4" type="CheckBox" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 220.0
margin_right = 1008.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Cuatro"
flat = false
align = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "custom_fonts" ]

[node name="CheckBox_tabla_5" type="CheckBox" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 293.0
margin_right = 530.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Cinco"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckBox_tabla_6" type="CheckBox" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 293.0
margin_right = 1008.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Seis"
flat = false
align = 0
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags", "custom_fonts" ]

[node name="CheckBox_tabla_7" type="CheckBox" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 366.0
margin_right = 544.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Siete"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckBox_tabla_8" type="CheckBox" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 366.0
margin_right = 988.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Ocho"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckBox_tabla_9" type="CheckBox" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 276.0
margin_top = 439.0
margin_right = 544.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Tabla del Nueve"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckBox_tabla_todas" type="CheckBox" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 720.0
margin_top = 439.0
margin_right = 1000.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
text = "Todas las tablas"
flat = false
align = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="mouse_entered" from="Button_atras" to="." method="_on_Button_atras_mouse_entered"]

[connection signal="pressed" from="Button_atras" to="." method="_on_Button_atras_pressed"]

[connection signal="mouse_entered" from="Button_inicio" to="." method="_on_Button_inicio_mouse_entered"]

[connection signal="pressed" from="Button_inicio" to="." method="_on_Button_inicio_pressed"]

[connection signal="toggled" from="CheckBox_tabla_1" to="." method="_on_CheckBox_tabla_1_toggled"]

[connection signal="toggled" from="CheckBox_tabla_2" to="." method="_on_CheckBox_tabla_2_toggled"]

[connection signal="toggled" from="CheckBox_tabla_3" to="." method="_on_CheckBox_tabla_3_toggled"]

[connection signal="toggled" from="CheckBox_tabla_4" to="." method="_on_CheckBox_tabla_4_toggled"]

[connection signal="toggled" from="CheckBox_tabla_5" to="." method="_on_CheckBox_tabla_5_toggled"]

[connection signal="toggled" from="CheckBox_tabla_6" to="." method="_on_CheckBox_tabla_6_toggled"]

[connection signal="toggled" from="CheckBox_tabla_7" to="." method="_on_CheckBox_tabla_7_toggled"]

[connection signal="toggled" from="CheckBox_tabla_8" to="." method="_on_CheckBox_tabla_8_toggled"]

[connection signal="toggled" from="CheckBox_tabla_9" to="." method="_on_CheckBox_tabla_9_toggled"]

[connection signal="toggled" from="CheckBox_tabla_todas" to="." method="_on_CheckBox_tabla_todas_toggled"]


